移除主题切换按钮中 SVG 图标的内联样式，以简化代码

--- a/admin/index.html
+++ b/admin/index.html
@@ -1532,7 +1532,7 @@ html.dark-mode .moon-icon {
                 </a>
                 <button class="social-link theme-toggle" id="themeToggle" title="切换夜间模式" onclick="toggleTheme()">
                     <!-- 太阳图标 (日间模式显示) -->
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="theme-icon sun-icon" style="display: block;">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="theme-icon sun-icon">
                         <circle cx="12" cy="12" r="5" fill="currentColor"/>
                         <g stroke="currentColor" stroke-width="2" stroke-linecap="round" fill="none">
                             <line x1="12" y1="1" x2="12" y2="3"/>
@@ -1546,7 +1546,7 @@ html.dark-mode .moon-icon {
                         </g>
                     </svg>
                     <!-- 月亮图标 (夜间模式显示) -->
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="theme-icon moon-icon" style="display: none;">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="theme-icon moon-icon">
                         <path fill="currentColor" d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
                     </svg>
                 </button>
