--- a/admin/index.html
+++ b/admin/index.html
@@ -24,14 +24,14 @@
         @keyframes blurOverlayAppear {
             0% {
                 opacity: 0;
+                -webkit-backdrop-filter: blur(0px);
                 backdrop-filter: blur(0px);
-                -webkit-backdrop-filter: blur(0px)
             }
 
             100% {
                 opacity: 1;
+                -webkit-backdrop-filter: blur(12px);
                 backdrop-filter: blur(12px);
-                -webkit-backdrop-filter: blur(12px)
             }
         }
 
@@ -134,8 +134,8 @@
             width: 100%;
             height: 100%;
             background: linear-gradient(135deg, rgba(102, 126, 234, 0.1) 0, rgba(118, 75, 162, 0.15) 100%);
-            backdrop-filter: blur(12px);
             -webkit-backdrop-filter: blur(12px);
+            backdrop-filter: blur(12px);
             z-index: -2 !important;
             animation: blurOverlayAppear 1.5s ease-out forwards .3s;
             pointer-events: none;
@@ -160,8 +160,8 @@
         /* 通用卡片容器 */
         .card-container {
             background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(20px);
             -webkit-backdrop-filter: blur(20px);
+            backdrop-filter: blur(20px);
             padding: 50px 40px;
             border-radius: 24px;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3), 0 0 0 1px rgba(255, 255, 255, 0.1) inset;
@@ -565,8 +565,8 @@
             padding: 0;
             border: 2px solid #e5e7eb;
             border-radius: 4px;
-            appearance: none;
             -webkit-appearance: none;
+            appearance: none;
             position: relative;
             transition: all 0.3s ease;
             background-color: #fff
@@ -608,8 +608,8 @@
             font-size: 14px;
             color: #374151;
             cursor: pointer;
+            -webkit-user-select: none;
             user-select: none;
-            -webkit-user-select: none
         }
 
         /* 响应式设计 - 平板 */
@@ -1123,8 +1123,8 @@
             align-items: center;
             margin-bottom: 30px;
             background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(20px);
             -webkit-backdrop-filter: blur(20px);
+            backdrop-filter: blur(20px);
             padding: 25px 30px;
             border-radius: 16px;
             border-top: 4px solid;
@@ -1154,8 +1154,8 @@
 
         .module {
             background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(20px);
             -webkit-backdrop-filter: blur(20px);
+            backdrop-filter: blur(20px);
             border-radius: 16px;
             padding: 30px;
             margin-bottom: 25px;
