--- a/login/index.html
+++ b/login/index.html
@@ -21,13 +21,13 @@ body {
 @keyframes blurOverlayAppear {
     0% {
         opacity: 0;
+        -webkit-backdrop-filter: blur(0px);
         backdrop-filter: blur(0px);
-        -webkit-backdrop-filter: blur(0px)
     }
     100% {
         opacity: 1;
+        -webkit-backdrop-filter: blur(12px);
         backdrop-filter: blur(12px);
-        -webkit-backdrop-filter: blur(12px)
     }
 }
 
@@ -93,8 +93,8 @@ body {
     width: 100%;
     height: 100%;
     background: linear-gradient(135deg,rgba(102,126,234,0.1) 0,rgba(118,75,162,0.15) 100%);
-    backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
+    backdrop-filter: blur(12px);
     z-index: -2!important;
     animation: blurOverlayAppear 1.5s ease-out forwards .3s;
     pointer-events: none;
@@ -119,8 +119,8 @@ body {
 /* 通用卡片容器 */
 .card-container {
     background: rgba(255,255,255,0.95);
-    backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px);
     padding: 50px 40px;
     border-radius: 24px;
     box-shadow: 0 20px 60px rgba(0,0,0,0.3),0 0 0 1px rgba(255,255,255,0.1) inset;
