--- a/admin/index.html
+++ b/admin/index.html
@@ -3256,6 +3256,7 @@
                             </div>
                         </div>
                     </div>
+                    <small style="font-size: 12px; color: #9ca3af; margin-top: 6px; display: block;">💡 <b>国内测试</b> 是由您梯子的 <b>分流规则</b> 决定的，<b>国外测试</b> 是由您的 <b>优选IP</b> 决定的，而 <b>CF、Twitter、ChatGPT</b> 是由您的 <b>PROXYIP</b> 决定的。</small>
                 </div>
             </div>
 
@@ -3828,8 +3829,7 @@ https://raw.githubusercontent.com/cmliu/WorkerVless2sub/main/addressesapi.txt"
                 <div class="form-group subapi-form-group">
                     <label>API Token</label>
                     <input type="password" id="cloudflareAPIToken" placeholder="输入API Token">
-                    <small style="font-size: 12px; color: #9ca3af; margin-top: 6px; display: block;">💡 API令牌权限 使用
-                        "阅读分析数据和日志" 模板即可</small>
+                    <small style="font-size: 12px; color: #9ca3af; margin-top: 6px; display: block;">💡 API令牌权限 使用 "阅读分析数据和日志" 模板即可</small>
                 </div>
             </div>
 
