--- a/admin/index.html
+++ b/admin/index.html
@@ -7917,15 +7917,14 @@ vless://7b102311-43fd-4e8f-977e-8090623c101d@edt-pages.github.io:443?security=tl
             // 计算基础评分：(company + asn) / 2 * 5
             let baseScore = ((company + asn) / 2) * 5;
 
-            // 计算安全风险附加分：每个安全风险项增加 20%
+            // 计算安全风险附加分：每个安全风险项增加 15%
             let riskAddition = 0;
             const riskFlags = [
                 securityFlags.is_crawler,   // 爬虫
                 securityFlags.is_proxy,     // 代理服务器
                 securityFlags.is_vpn,       // VPN
                 securityFlags.is_tor,       // Tor 网络
-                securityFlags.is_abuser,    // 滥用 IP
-                securityFlags.is_bogon      // 虚假 IP
+                securityFlags.is_abuser     // 滥用 IP
             ];
 
             // 统计为 true 的风险项数量
@@ -7933,10 +7932,15 @@ vless://7b102311-43fd-4e8f-977e-8090623c101d@edt-pages.github.io:443?security=tl
             riskAddition = riskCount * 0.15; // 每个风险项增加 15%
 
             // 最终评分 = 基础评分 + 风险附加分
-            const finalScore = baseScore + riskAddition;
+            let finalScore = baseScore + riskAddition;
 
-            // 如果基础评分和风险附加分都是0，返回null
-            if (baseScore === 0 && riskAddition === 0) return null;
+            // 如果是虚假IP (蜜罐)，则风险值增加100%
+            if (securityFlags.is_bogon === true) {
+                finalScore += 1.0; // 增加100%
+            }
+
+            // 如果基础评分和风险附加分都是0且不是虚假IP，返回null
+            if (baseScore === 0 && riskAddition === 0 && securityFlags.is_bogon !== true) return null;
 
             return finalScore;
         }
@@ -8112,12 +8116,12 @@ vless://7b102311-43fd-4e8f-977e-8090623c101d@edt-pages.github.io:443?security=tl
                                 <div class="tooltip-section">
                                     <p class="tooltip-section-title">安全风险项</p>
                                     <ul class="risk-list">
-                                        <li>爬虫 (Crawler)</li>
-                                        <li>代理 (Proxy)</li>
-                                        <li>VPN</li>
-                                        <li>Tor 网络</li>
-                                        <li>滥用IP (Abuser)</li>
-                                        <li>虚假IP (Bogon)</li>
+                                        <li>爬虫 (Crawler) - 15%</li>
+                                        <li>代理 (Proxy) - 15%</li>
+                                        <li>VPN - 15%</li>
+                                        <li>Tor 网络 - 15%</li>
+                                        <li>滥用IP (Abuser) - 15%</li>
+                                        <li>虚假IP (Bogon) - <span style="color: #ef4444; font-weight: bold;">100% (蜜罐)</span></li>
                                     </ul>
                                 </div>
                             </span>
