--- a/admin/index.html
+++ b/admin/index.html
@@ -4426,10 +4426,10 @@ vless://7b102311-43fd-4e8f-977e-8090623c101d@edt-pages.github.io:443?security=tl
                         <div class="form-group" id="enableECHGroup" style="display: none;">
                             <div class="input-wrapper">
                                 <div class="checkbox-group">
-                                    <input type="checkbox" id="enableECH" title="v2rayN测试版功能，启用ECH可以无视域名阻断。"
+                                    <input type="checkbox" id="enableECH" title="启用ECH可以无视域名阻断，仅支持 v2rayN v7.17.0 或更高版本"
                                         onchange="markModified('config')">
                                     <label for="enableECH" class="checkbox-label"
-                                        title="v2rayN测试版功能，启用ECH可以无视域名阻断。">启用ECH(v2rayN)</label>
+                                        title="启用ECH可以无视域名阻断，仅支持 v2rayN v7.17.0 或更高版本">启用ECH(v2rayN)</label>
                                 </div>
                             </div>
                         </div>
