fix: 更新延迟颜色样式以改善可读性

--- a/admin/index.html
+++ b/admin/index.html
@@ -914,8 +914,8 @@
             --latency-49: #4CAF50;
             --latency-149: #83DA00;
             --latency-299: #f58722;
-            --latency-999: #fb2c36;
-            --latency-1000: #82181a;
+            --latency-999: #ff404a;
+            --latency-1000: #c40003;
         }
 
         html.dark-mode {
