--- a/admin/index.html
+++ b/admin/index.html
@@ -4663,29 +4663,29 @@ vless://7b102311-43fd-4e8f-977e-8090623c101d@edt-pages.github.io:443?security=tl
                         <div class="input-wrapper" style="flex-direction: column; align-items: stretch;">
                             <select id="echDNSSelect" title="ECH DNS服务" style="display: none;"
                                 onchange="onEchDNSSelectChange()">
-                                <option value="udp://45.90.28.0:5353">
+                                <option value="udp://45.90.28.0:5353" data-region="international">
                                     udp://45.90.28.0:5353（NextDNS）小白推荐选这个！！！</option>
-                                <option value="udp://208.67.220.220:443">
+                                <option value="udp://208.67.220.220:443" data-region="international">
                                     udp://208.67.220.220:443（OpenDNS）</option>
-                                <option value="udp://149.112.112.112:9953">
+                                <option value="udp://149.112.112.112:9953" data-region="international">
                                     udp://149.112.112.112:9953（Quad9）</option>
-                                <option value="udp://188.166.206.224:5003">
+                                <option value="udp://188.166.206.224:5003" data-region="international">
                                     udp://188.166.206.224:5003（Tiarap）</option>
-                                <option value="https://doh.applied-privacy.net/query">
+                                <option value="https://doh.applied-privacy.net/query" data-region="international">
                                     https://doh.applied-privacy.net/query（Applied Privacy DoH）</option>
-                                <option value="https://odvr.nic.cz/doh">
+                                <option value="https://odvr.nic.cz/doh" data-region="international">
                                     https://odvr.nic.cz/doh（CZ.NIC DoH）</option>
-                                <option value="https://doh.cmliussss.net/CMLiussss">
+                                <option value="https://doh.cmliussss.net/CMLiussss" data-region="international">
                                     https://doh.cmliussss.net/CMLiussss（Cloudflare DoH：CM镜像）</option>
-                                <option value="https://doh.cmliussss.com/CMLiussss">
+                                <option value="https://doh.cmliussss.com/CMLiussss" data-region="international">
                                     https://doh.cmliussss.com/CMLiussss（Google DoH：CM镜像）</option>
-                                <option value="https://dns.alidns.com/dns-query">
+                                <option value="https://dns.alidns.com/dns-query" data-region="domestic">
                                     https://dns.alidns.com/dns-query（阿里 DoH：国内DNS需搭配设置ECH解析域名，是否可用需自行验证）</option>
-                                <option value="https://sm2.doh.pub/dns-query">
+                                <option value="https://sm2.doh.pub/dns-query" data-region="domestic">
                                     https://sm2.doh.pub/dns-query（腾讯国密 DoH：国内DNS需搭配设置ECH解析域名，是否可用需自行验证）</option>
-                                <option value="https://doh.360.cn/dns-query">
+                                <option value="https://doh.360.cn/dns-query" data-region="domestic">
                                     https://doh.360.cn/dns-query（360 DoH：国内DNS需搭配设置ECH解析域名，是否可用需自行验证）</option>
-                                <option value="https://doh.onedns.net/dns-query">
+                                <option value="https://doh.onedns.net/dns-query" data-region="domestic">
                                     https://doh.onedns.net/dns-query（OneDNS DoH：国内DNS需搭配设置ECH解析域名，是否可用需自行验证）</option>
                                 <option value="custom">自定义</option>
                             </select>
@@ -6693,6 +6693,20 @@ vless://7b102311-43fd-4e8f-977e-8090623c101d@edt-pages.github.io:443?security=tl
                 customInput.value = '';
                 hiddenValue.value = select.value;
             }
+
+            // 检查是否选择了国内DNS，若是则自动调整ECH解析域名
+            const selectedOption = select.options[select.selectedIndex];
+            const region = selectedOption.dataset.region;
+
+            if (region === 'domestic') {
+                const echSNISelect = document.getElementById('echSNISelect');
+                // 如果当前选择是 __AUTO__，自动改为 cloudflare-ech.com
+                if (echSNISelect.value === '__AUTO__') {
+                    echSNISelect.value = 'cloudflare-ech.com';
+                    onEchSNISelectChange();
+                }
+            }
+
             markModified('ech');
         }
 
