feat: 添加对澳门地区的支持，优化区域查询逻辑

--- a/admin/index.html
+++ b/admin/index.html
@@ -11422,6 +11422,8 @@ vless://7b102311-43fd-4e8f-977e-8090623c101d@edt-pages.github.io:443?security=tl
                 regionQuery = `province: "HongKong"`;
             } else if (region === 'TW') {
                 regionQuery = `province: "TaiWan"`;
+            }  else if (region === 'MO') {
+                regionQuery = `province: "Macao"`;
             } else {
                 regionQuery = `country: "${region}"`;
             }
