fix: 优化SOCKS5和HTTP弹窗的关闭按钮样式，提升用户体验

--- a/admin/index.html
+++ b/admin/index.html
@@ -5899,9 +5899,9 @@ vless://7b102311-43fd-4e8f-977e-8090623c101d@edt-pages.github.io:443?security=tl
     </div>
 
     <!-- 探索SOCKS5弹窗 -->
-    <div class="modal-overlay" id="exploreSocks5Modal" onclick="closeExploreSocks5Modal(event)">
-        <div class="modal" onclick="event.stopPropagation()" style="max-width: 550px; text-align: left;">
-            <button type="button" class="modal-close" onclick="closeExploreSocks5Modal(event)">×</button>
+    <div class="modal-overlay" id="exploreSocks5Modal">
+        <div class="modal" style="max-width: 550px; text-align: left;">
+            <button type="button" class="modal-close" onclick="closeExploreSocks5Modal(event)" style="cursor: pointer;">×</button>
             <h2 class="section-title" style="margin-bottom: 15px; text-align: center;">🗺️ 探索更多 SOCKS5</h2>
             
             <div class="socks5-list-container">
@@ -5940,9 +5940,9 @@ vless://7b102311-43fd-4e8f-977e-8090623c101d@edt-pages.github.io:443?security=tl
     </div>
 
     <!-- 探索HTTP弹窗 -->
-    <div class="modal-overlay" id="exploreHTTPModal" onclick="closeExploreHTTPModal(event)">
-        <div class="modal" onclick="event.stopPropagation()" style="max-width: 550px; text-align: left;">
-            <button type="button" class="modal-close" onclick="closeExploreHTTPModal(event)">×</button>
+    <div class="modal-overlay" id="exploreHTTPModal">
+        <div class="modal" style="max-width: 550px; text-align: left;">
+            <button type="button" class="modal-close" onclick="closeExploreHTTPModal(event)" style="cursor: pointer;">×</button>
             <h2 class="section-title" style="margin-bottom: 15px; text-align: center;">🗺️ 探索更多 HTTP</h2>
             
             <div class="http-list-container">
