fix: 调整响应式设计，优化表单组在小屏幕上的布局以提升用户体验

--- a/admin/index.html
+++ b/admin/index.html
@@ -2710,7 +2710,11 @@
 
         @media (max-width: 768px) {
             .optimize-params-row {
-                grid-template-columns: 1fr;
+                display: block;
+            }
+
+            .optimize-params-row .form-group {
+                margin-bottom: 15px;
             }
         }
 
