--- a/admin/index.html
+++ b/admin/index.html
@@ -6739,7 +6739,10 @@ vless://7b102311-43fd-4e8f-977e-8090623c101d@edt-pages.github.io:443?security=tl
             </div>
 
             <div class="form-group">
-                <label for="proxyIPTemplateInput">PROXYIP路径</label>
+                <div style="display: flex; align-items: center; gap: 4px;">
+                    <label for="proxyIPTemplateInput">PROXYIP路径</label>
+                    <div id="proxyIPTemplateError" style="display: none; font-size: 12px; color: #ef4444;">缺少占位符 {{IP:PORT}}</div>
+                </div>
                 <div class="path-template-input-wrapper">
                     <input type="text" id="proxyIPTemplateInput" placeholder="proxyip={{IP:PORT}}" 
                         oninput="onPathTemplateInput(); preventInvalidChars(this); ensurePathPrefix(this)"
@@ -6749,7 +6752,10 @@ vless://7b102311-43fd-4e8f-977e-8090623c101d@edt-pages.github.io:443?security=tl
             </div>
 
             <div class="form-group">
-                <label for="socks5StandardTemplateInput">SOCKS5标准路径</label>
+                <div style="display: flex; align-items: center; gap: 4px;">
+                    <label for="socks5StandardTemplateInput">SOCKS5标准路径</label>
+                    <div id="socks5StandardTemplateError" style="display: none; font-size: 12px; color: #ef4444;">缺少占位符 {{IP:PORT}}</div>
+                </div>
                 <div class="path-template-input-wrapper">
                     <input type="text" id="socks5StandardTemplateInput" placeholder="socks5={{IP:PORT}}"
                         oninput="onPathTemplateInput(); preventInvalidChars(this); ensurePathPrefix(this)"
@@ -6759,7 +6765,10 @@ vless://7b102311-43fd-4e8f-977e-8090623c101d@edt-pages.github.io:443?security=tl
             </div>
 
             <div class="form-group">
-                <label for="socks5GlobalTemplateInput">SOCKS5全局路径</label>
+                <div style="display: flex; align-items: center; gap: 4px;">
+                    <label for="socks5GlobalTemplateInput">SOCKS5全局路径</label>
+                    <div id="socks5GlobalTemplateError" style="display: none; font-size: 12px; color: #ef4444;">缺少占位符 {{IP:PORT}}</div>
+                </div>
                 <div class="path-template-input-wrapper">
                     <input type="text" id="socks5GlobalTemplateInput" placeholder="socks5://{{IP:PORT}}"
                         oninput="onPathTemplateInput(); preventInvalidChars(this); ensurePathPrefix(this)"
@@ -6769,7 +6778,10 @@ vless://7b102311-43fd-4e8f-977e-8090623c101d@edt-pages.github.io:443?security=tl
             </div>
 
             <div class="form-group">
-                <label for="httpStandardTemplateInput">HTTP标准路径</label>
+                <div style="display: flex; align-items: center; gap: 4px;">
+                    <label for="httpStandardTemplateInput">HTTP标准路径</label>
+                    <div id="httpStandardTemplateError" style="display: none; font-size: 12px; color: #ef4444;">缺少占位符 {{IP:PORT}}</div>
+                </div>
                 <div class="path-template-input-wrapper">
                     <input type="text" id="httpStandardTemplateInput" placeholder="http={{IP:PORT}}"
                         oninput="onPathTemplateInput(); preventInvalidChars(this); ensurePathPrefix(this)"
@@ -6779,7 +6791,10 @@ vless://7b102311-43fd-4e8f-977e-8090623c101d@edt-pages.github.io:443?security=tl
             </div>
 
             <div class="form-group">
-                <label for="httpGlobalTemplateInput">HTTP全局路径</label>
+                <div style="display: flex; align-items: center; gap: 4px;">
+                    <label for="httpGlobalTemplateInput">HTTP全局路径</label>
+                    <div id="httpGlobalTemplateError" style="display: none; font-size: 12px; color: #ef4444;">缺少占位符 {{IP:PORT}}</div>
+                </div>
                 <div class="path-template-input-wrapper">
                     <input type="text" id="httpGlobalTemplateInput" placeholder="http://{{IP:PORT}}"
                         oninput="onPathTemplateInput(); preventInvalidChars(this); ensurePathPrefix(this)"
@@ -9894,11 +9909,21 @@ vless://7b102311-43fd-4e8f-977e-8090623c101d@edt-pages.github.io:443?security=tl
             const inputElement = document.getElementById(inputId);
             const wrapper = inputElement.closest('.path-template-input-wrapper');
             
-            // 如果内容不为空且不包含占位符，添加invalid样式
+            // 生成对应的错误提示的ID
+            const errorId = inputId.replace('Input', 'Error');
+            const errorElement = document.getElementById(errorId);
+            
+            // 如果内容不为空且不包含占位符，添加invalid样式并显示错误提示
             if (value.trim() && !value.includes('{{IP:PORT}}')) {
                 wrapper.classList.add('invalid');
+                if (errorElement) {
+                    errorElement.style.display = 'block';
+                }
             } else {
                 wrapper.classList.remove('invalid');
+                if (errorElement) {
+                    errorElement.style.display = 'none';
+                }
             }
         }
 
