--- a/admin/index.html
+++ b/admin/index.html
@@ -12316,12 +12316,14 @@ vless://7b102311-43fd-4e8f-977e-8090623c101d@edt-pages.github.io:443?security=tl
             try {
                 // 先尝试主 API
                 const response = await fetch(`https://api.ipapi.is/`);
+                if (!response.ok) throw new Error(`HTTP ${response.status}: ${response.statusText}`);
                 data = await response.json();
             } catch (error) {
                 console.log(`[国外测试] 主API失败，尝试备用API: ${error.message}`);
                 try {
                     // 失败则尝试备用 API
                     const response = await fetch(`https://api.cmliussss.net/ipapi?_t=${Date.now()}`);
+                    if (!response.ok) throw new Error(`HTTP ${response.status}: ${response.statusText}`);
                     data = await response.json();
                 } catch (backupError) {
                     document.getElementById('overseas-ip').innerHTML = '<span class="error">加载失败</span>';
